# libsais-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: fully_configured_generalized_suffix_array.rs  large_alphabet_suffix_array.rs  the_lcp_ladder.rs  to_the_bwt_and_back.rs
libsais/: Cargo.toml
libsais-sys/: Cargo.toml  README.md  build.rs
libsais-sys/src/: lib.rs  libsais.rs  libsais16.rs  libsais16x64.rs  libsais64.rs
libsais-sys/tests/: basic_funcionality.rs
src/: bwt.rs  context.rs  data_structures.rs  error.rs  helpers.rs  lcp.rs  lib.rs  model.rs  owned_or_borrowed.rs  plcp.rs  suffix_array.rs  type_model.rs  type_state.rs  typestate.rs  unbwt.rs
src/construction/: bwt.rs  lcp.rs  mod.rs  plcp.rs  suffix_array.rs  unbwt.rs
src/generics_dispatch/: impls.rs  mod.rs
tests/: bwt.rs  common.rs  lcp.rs  sais.rs  suffix_array.rs  unbwt.rs
