[package]
name = "libsais"
version = "0.1.0"
authors = ["Felix Leander Droop <info@felix-droop.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/feldroop/libsais-rs"
documentation = "https://docs.rs/libsais"
homepage = "https://github.com/feldroop/libsais-rs"
description = "Bindings to the C library libsais for suffix array construction"
categories = ["string-analysis", "bioinformatics", "algorithm", "suffix-array"]
edition = "2024"

[workspace]
members = ["libsais-sys"]

[features]
default = ["openmp"]
openmp = ["libsais-sys/openmp"]

[dependencies.libsais-sys]
path = "libsais-sys"
version = "0.1.0"
default-features = false
