[package]
name = "libsais"
version = "0.1.3"
authors = ["Felix Leander Droop <info@felix-droop.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/feldroop/libsais-rs"
documentation = "https://docs.rs/libsais"
homepage = "https://github.com/feldroop/libsais-rs"
description = "Bindings to the C library libsais for suffix array construction"
categories = ["science::bioinformatics::sequence-analysis", "text-processing", "api-bindings"]
keywords = ["bioinformatics", "saca", "suffix-array", "bwt", "lcp"]
edition = "2024"

[workspace]
members = ["libsais-sys"]

[features]
default = ["openmp"]
openmp = ["libsais-sys/openmp"]

[dependencies.libsais-sys]
path = "libsais-sys"
version = "0.1.2"
default-features = false

[dependencies]
either = "1.15.0"
num-traits = "0.2.19"

[dev-dependencies]
rand = "0.9"
