[package]
name = "libsais-sys"
version = "0.2.0"
authors = ["Felix Leander Droop <info@felix-droop.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/feldroop/libsais-rs/tree/master/libsais-sys"
documentation = "https://docs.rs/libsais-sys"
homepage = "https://github.com/feldroop/libsais-rs/tree/master/libsais-sys"
description = "Raw bindings to the C library libsais for suffix array construction"
categories = ["science::bioinformatics::sequence-analysis", "text-processing", "external-ffi-bindings"]
keywords = ["bioinformatics", "saca", "suffix-array", "bwt", "lcp"]
edition = "2024"

[features]
default = ["openmp"]
openmp = ["openmp-sys"]

[dependencies]
openmp-sys = { version = "1.2.3", "optional" = true }

[build-dependencies]
cc = "1.2.32"
